tests/miz/pass/attributes/pass_attributes_conjunctive_type_001.miz
definition
  attr finite means
    it has finitely many elements;
end;

definition
  let X be finite empty set;
  theorem
    X = X;
  proof
  end;
end;
