tests/miz/fail/types/fail_types_incompatible_equality_001.miz
definition
  let X be set;
  let P be bool;
  theorem
    X = P;
  proof
  end;
end;
